--- a/app/src/main/res/layout/activity_getinfo.xml
+++ b/app/src/main/res/layout/activity_getinfo.xml
@@ -1,69 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/nameView"
-            android:layout_marginTop="13dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
-
-        <TextView
-            android:id="@+id/phoneNumView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
-
-        <TextView
-            android:id="@+id/homeNumView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
-
-        <TextView
-            android:id="@+id/addressView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
-
-        <TextView
-            android:id="@+id/genderView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
-        <TextView
-            android:id="@+id/locView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textDirection="rtl"
-            android:layout_gravity="right"
-            />
+            android:orientation="vertical">
 
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/nameView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="15dp"
+                android:layout_marginTop="13dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textDirection="rtl" />
 
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/phoneNumView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="15dp"
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/homeNumView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="15dp"
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/addressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="15dp"
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/genderView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="15dp"
+                android:textDirection="rtl" />
+
+            <TextView
+                android:id="@+id/locView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_margin="15dp"
+                android:textDirection="rtl" />
+
+
+        </LinearLayout>
+    </ScrollView>
+
+</FrameLayout>
