--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MapsActivity">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -82,6 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginRight="0dp"
+                    android:layout_marginLeft="10dp"
                     android:text="آدرس دقیق" />
 
                 <ImageView
